added address submission page. Added ability to update status

--- a/server/views/proposedAddress/confirmAddressForm.pug
+++ b/server/views/proposedAddress/confirmAddressForm.pug
@@ -67,5 +67,5 @@ block content
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
-            a#continueBtn.requiredButton.button.smallMarginTop(href="/hdc/taskList/" + nomisId role="button") Save and continue
+            a#continueBtn.requiredButton.button.smallMarginTop(href=nextPath + nomisId role="button") Save and continue
             a#backBtn.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/taskList/" + nomisId role="button") Return to tasklist
