--- a/server/views/taskList/proposedAddressSummary.pug
+++ b/server/views/taskList/proposedAddressSummary.pug
@@ -1,17 +1,28 @@
-if eligible
+if isEligible
     div.largeMarginBottom.borderTop
         h2.heading-medium Proposed address / opt out request
         div.pure-g
             div.pure-u-9-12
-                if !optOut
+                if !hasStarted
                     | Information not yet entered
+                else if hasOptedOut
+                    | Prisoner has opted out of HDC
+                else if hasBassReferral
+                    | Prisoner has opted in and requested BASS referral
+                else if submittedToRo
+                    | Proposed address information sent to RO
                 else
-                    | Information has been entered
+                    | Information not yet submitted
+
             div.pure-u-1-4
-                a.taskListAction.center.button(href="/hdc/proposedAddress/optOut/"+prisonerInfo.offenderNo)
-                    if !optOut
-                        | Start
-                    else
-                        | Continue
+                if submittedToRo || hasOptedOut || hasBassReferral
+                    a.taskListAction.center.button.button-secondary(href="/hdc/proposedAddress/optOut/"+prisonerInfo.offenderNo)
+                        | View
+                else
+                    a.taskListAction.center.button(href="/hdc/proposedAddress/optOut/"+prisonerInfo.offenderNo)
+                        if !hasStarted
+                            | Start
+                        else
+                            | Continue
 
 
