--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -5,71 +5,26 @@ block content
     div.back-link-container
         a.link-back(href="/") Back to case list
 
-    h1.heading-large Check prisoner details
-    h2.heading-medium Personal details
+    if role === 'CA'
+        h1.heading-large Check prisoner details
+    else
+        h1.heading-large HDC release tasks
 
-    if !prisonerInfo
-
+    if !role
+        p Error
+    else if !prisonerInfo
         p No prisoner details found
-
     else
 
-        div#personalDetails.pure-g.borderBottom.paddingBottom
-            div.pure-u-1.pure-u-md-1-4
-                if prisonerInfo.imageId
-                    img#prisonerImage(src= "image/"+prisonerInfo.imageId)
-                else
-                    img#prisonerImage(src= "/public/images/placeholder.png")
-                if(prisonerInfo.captureDate)
-                    span.block.subText#prisonerPhotoDate Uploaded: #{prisonerInfo.captureDate}
+        include prisonerDetails
 
-            div.pure-u-1.pure-u-md-1-4
-                div.midMarginBottom
-                    | Name
-                    if(prisonerInfo.firstName || prisonerInfo.lastName)
-                        span#prisonerName.block.bold #{prisonerInfo.lastName}, #{prisonerInfo.firstName}
+        if role === 'CA'
+            include eligibilityTask
+            include proposedAddressTask
 
-                div.midMarginBottom
-                    | Aliases
-                    if(prisonerInfo.aliases)
-                        span#prisonerAliases.block.bold #{prisonerInfo.aliases}
-
-                div.midMarginBottom
-                    | Prison number
-                    if(prisonerInfo.offenderNo)
-                        span#prisonerPrisonNumber.block.bold #{prisonerInfo.offenderNo}
-
-            div.pure-u-1.pure-u-md-1-4
-                div.midMarginBottom
-                    | Date of birth
-                    if(prisonerInfo.dateOfBirth)
-                        span#prisonerDob.block.bold #{prisonerInfo.dateOfBirth}
-
-                div.midMarginBottom
-                    | Location
-                    if(prisonerInfo.agencyLocationDesc)
-                        span#prisonerLocation.block.bold #{prisonerInfo.agencyLocationDesc}
-
-                div.midMarginBottom
-                    | Type of offence(s)
-                    if(prisonerInfo.offences)
-                        span#prisonerOffences.block.bold #{prisonerInfo.offences}
-
-            div.pure-u-1.pure-u-md-1-4
-                div.midMarginBottom
-                    | CRD
-                    if (prisonerInfo.conditionalReleaseDate)
-                         span#prisonerCrd.block.bold  #{prisonerInfo.conditionalReleaseDate}
-
-                div.midMarginBottom
-                    | HDCED
-                    if (prisonerInfo.homeDetentionCurfewEligibilityDate)
-                        span#prisonerHdced.block.bold  #{prisonerInfo.homeDetentionCurfewEligibilityDate}
-
-                div.midMarginBottom
-                    | Responsible officer
-                    if (prisonerInfo.com)
-                        span#prisonerComName.block.bold  #{prisonerInfo.com}
-
-        include eligibilitySummary
-        include proposedAddressSummary
+        if role === 'RO'
+            include curfewAddressTask
+            include additionalConditionsTask
+            include riskManagementTask
+            include reportingInstructionsTask
+            include submitTask
