added first draft of details page

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -53,6 +53,11 @@ a.button.button-secondary {
     padding-bottom: 10px;
 }
 
+.midPaddingTopBottom {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .midPaddingBottom {
     padding-bottom: 20px;
 }
