--- a/server/views/licenceConditions/conditionsReviewForm.pug
+++ b/server/views/licenceConditions/conditionsReviewForm.pug
@@ -2,26 +2,13 @@ extends ../layout
 
 block content
 
-    h2.heading-medium.borderBottom Additional conditions
-    div.pure-g.largePaddingBottom
-        div.pure-u-2-3
-            div.borderBottomLight
-                h3.heading-small Conditions
-                for condition in data
-                    if condition.group
-                        h3.heading-small #{condition.group}
-                            if condition.subgroup
-                                |  -- #{condition.subgroup}
+    div.largePaddingBottom
+        if licence.additionalConditions && licence.additionalConditions.length > 0
+            include ../licenceDetails/additionalConditions
 
-                    p
-                        for item in condition.content
-                            if item.text
-                                | #{item.text}
-                            if item.variable
-                                span(class="bold") #{item.variable}
-
+    a#addAnother.button.button-secondary.largeMarginBottom(href="/hdc/licenceConditions/additionalConditions/" + nomisId role="button") Add another condition
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
             a#continueBtn.requiredButton.button(href=nextPath + nomisId role="button") Save and continue
-            a#editLink.smallMarginTop(href="/hdc/licenceConditions/additionalConditions/" + nomisId role="button") Edit details
+            a#editLink.smallMarginTop(href="/hdc/taskList/" + nomisId role="button") Back to tasklist
