--- a/server/views/licenceConditions/additionalConditionsForm.pug
+++ b/server/views/licenceConditions/additionalConditionsForm.pug
@@ -9,6 +9,9 @@ block content
                     |Not all required information was submitted correctly
                 p Please correct the form where indicated below
 
+    div.back-link-container.smallPaddingTop
+        a.link-back(href="javascript: window.history.back();") Back
+
     h1.heading-large Additional conditions
 
     form#additionalConditions(method='POST')
