--- a/server/views/taskList/riskManagementTask.pug
+++ b/server/views/taskList/riskManagementTask.pug
@@ -10,7 +10,7 @@ div.largeMarginBottom.borderTop
             else
                 | Risk management confirmed
         div.pure-u-1-4
-            a.taskListAction.center.button(href="/hdc/riskManagement/" + prisonerInfo.offenderNo)
+            a.taskListAction.center.button(href="/hdc/licenceConditions/riskManagement/" + prisonerInfo.offenderNo)
                 if !riskManagement
                     | Start
                 else
