Fix standard conditions link

--- a/server/views/licenceConditions/standardConditionsForm.pug
+++ b/server/views/licenceConditions/standardConditionsForm.pug
@@ -1,8 +1,8 @@
 extends ../layout
 
 block content
-    div.back-link-container
-        a.link-back(href="/additionalConditions/"+nomisId) Back
+    div.back-link-container.smallPaddingTop
+        a.link-back(href="javascript: window.history.back();") Back
 
     h1.heading-large The standard conditions
 
