--- a/server/views/taskList/proposedAddressTask.pug
+++ b/server/views/taskList/proposedAddressTask.pug
@@ -4,7 +4,7 @@ if taskData.isEligible
         div.pure-g
             div.pure-u-9-12
                 if !taskData.hasStarted
-                    | Info0rmation not yet entered
+                    | Information not yet entered
                 else if taskData.hasOptedOut
                     | Prisoner has opted out of HDC
                 else if taskData.hasBassReferral
