--- a/server/views/taskList/additionalConditionsTask.pug
+++ b/server/views/taskList/additionalConditionsTask.pug
@@ -5,13 +5,12 @@ div.largeMarginBottom.borderTop
 
     div.pure-g
         div.pure-u-9-12
-            if !additionalConditions
-                | No conditions added
-            else
-                | Additional conditions added
+            // TODO define text
+            | No conditions added
         div.pure-u-1-4
+
             a.taskListAction.center.button(href="/hdc/licenceConditions/standardConditions/" + prisonerInfo.offenderNo)
-                if !additionalConditions
+                if taskData.additionalConditions.state === 'UNSTARTED'
                     | Start
                 else
                     | View
