Fix purecss bugs

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -16,6 +16,23 @@ a.button.button-secondary {
     text-align: center;
 }
 
+.app-container {
+    max-width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
+.l-box {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.content-pull {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
 .block {
     display: block;
 }
