--- a/server/views/send/CAtoRO.pug
+++ b/server/views/send/CAtoRO.pug
@@ -1,6 +1,7 @@
-div.pure-u-2-3
-    h2.heading-large.midPaddingBottom Submit to Responsible Officer
-    p.lede The proposed address information is ready to be submitted to the RO or you can return to your dashboard and submit it later.
+div.pure-g
+    div.pure-u-2-3
+        h2.heading-large.midPaddingBottom Submit to Responsible Officer
+        p.lede The proposed address information is ready to be submitted to the RO or you can return to your dashboard and submit it later.
 
 div#continueBtns.pure-g.paddingBottom
     div.pure-u-1
