--- a/server/views/send/DM.pug
+++ b/server/views/send/DM.pug
@@ -1,6 +1,7 @@
-div.pure-u-2-3
-    h2.heading-large.midPaddingBottom Submit to the OMU team
-    p.lede The HDC decision can now be submitted to the OMU team or you can return to the task list and submit it later.
+div.pure-g
+    div.pure-u-2-3
+        h2.heading-large.midPaddingBottom Submit to the OMU team
+        p.lede The HDC decision can now be submitted to the OMU team or you can return to the task list and submit it later.
 
 div#continueBtns.pure-g.paddingBottom
     div.pure-u-1
