--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -6,29 +6,33 @@ html(lang="en")
         meta(property="og:image" content="/public/images/opengraph-image.png?0.19.2")
         title Licences Application
 
-
-        <!--[if gt IE 8]><!--><link href="/public/stylesheets/govuk-template.css?"+version media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
-
-        <!--[if gte IE 9]><!--><link href="/public/stylesheets/fonts.css?0.19.2" media="all" rel="stylesheet" /><!--<![endif]-->
-        <!--[if IE 8]><link href="/public/stylesheets/govuk-template-ie8.css?0.19.2" media="screen" rel="stylesheet" /><!--<![endif]-->
-
-        <!--[if lt IE 9]><script src="/public/javascripts/ie.js?0.19.2"></script><!--<![endif]-->
-
         link(rel="shortcut icon", href="/public/images/favicon.ico?0.19.2", type="image/x-icon")
         link(rel="mask-icon", href="/public/images/gov.uk_logotype_crown.svg?0.19.2", color="#0b0c0c")
         link(rel="apple-touch-icon-precomposed", sizes="152x152", href="/public/images/apple-touch-icon-152x152.png?0.19.2")
         link(rel="apple-touch-icon-precomposed", sizes="120x120", href="/public/images/apple-touch-icon-120x120.png?0.19.2")
         link(rel="apple-touch-icon-precomposed", sizes="76x76", href="/public/images/apple-touch-icon-76x76.png?0.19.2")
         link(rel="apple-touch-icon-precomposed", sizes="76x76", href="/public/images/apple-touch-icon-60x60.png?0.19.2")
-        link(href="/public/stylesheets/datepicker.css", media="screen", rel="stylesheet", type="text/css")
+
+        <!--[if gt IE 8]><!--><link href="/public/stylesheets/govuk-template.css?"+version media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
+        <!--[if gte IE 9]><!--><link href="/public/stylesheets/fonts.css?0.19.2" media="all" rel="stylesheet" /><!--<![endif]-->
+        <!--[if IE 8]><link href="/public/stylesheets/govuk-template-ie8.css?0.19.2" media="screen" rel="stylesheet" /><!--<![endif]-->
+
+        link(href="/public/stylesheets/pure.css?" + version, media="screen", rel="stylesheet", type="text/css")
+
         <!--[if gt IE 8]><!-->
-        link(href="/public/stylesheets/grid.css?"+version, media="screen", rel="stylesheet", type="text/css")
-        link(href="/public/stylesheets/application.css?"+version, media="screen", rel="stylesheet", type="text/css")
+        link(href="/public/stylesheets/grid.css?" + version, media="screen", rel="stylesheet", type="text/css")
+        link(href="/public/stylesheets/application.css?" + version, media="screen", rel="stylesheet", type="text/css")
         <!--<![endif]-->
+
         <!--[if lt IE 9]>
         link(href="/public/stylesheets/grid-old-ie.css", media="screen", rel="stylesheet", type="text/css")
         link(href="/stylesheets/application-oldie.css", media="screen", rel="stylesheet", type="text/css")
         <![endif]-->
+
+        link(href="/public/stylesheets/datepicker.css", media="screen", rel="stylesheet", type="text/css")
+
+        <!--[if lt IE 9]><script src="/public/javascripts/ie.js?0.19.2"></script><!--<![endif]-->
+
     body
         script.
             document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
@@ -41,7 +45,7 @@ html(lang="en")
             p GOV.UK uses cookies to make the site simpler.
                 a(href="https://www.gov.uk/help/cookies", target="_blank", title="Find out more about cookies") Find out more about cookies
         header(role="banner", id="global-header", class="with-proposition")
-            div(class="header-wrapper pure-g")
+            div(class="header-wrapper")
                 div(class="header-global")
                     div(class="header-logo")
                         a(href="/", title="Go to the homepage", id="logo", class="content hmppslogo")
@@ -52,9 +56,8 @@ html(lang="en")
                         span.bold #{user.firstName}, #{user.lastName} &nbsp;&nbsp;|&nbsp;&nbsp;
                         a(href="/logout") Logout
 
-        main.pure-g(role="main")
-            div.pure-u-1
-                block content
+        main.app-container(role="main")
+            block content
 
         footer(class="group js-footer", id="footer", role="contentinfo")
             div(class="footer-wrapper")
