--- a/server/views/licenceDetails/licenceDetails.pug
+++ b/server/views/licenceDetails/licenceDetails.pug
@@ -7,22 +7,23 @@ block content
     else
         h1.heading-large Licence details
 
-    div.pure-g.largeMarginBottom
-        div.pure-u-1
+    div.largeMarginBottom
 
-            if licence.proposedAddress && licence.proposedAddress.curfewAddress
-                include curfewAddress
+        if licence.proposedAddress && licence.proposedAddress.curfewAddress
+            include curfewAddress
 
-            if licence.additionalConditions && licence.additionalConditions.length > 0
-                include ./additionalConditions
+        if licence.additionalConditions && licence.additionalConditions.length > 0
+            include ./additionalConditions
 
-            if licence.licenceConditions && licence.licenceConditions.riskManagement
-                include ./riskManagement
+        if licence.licenceConditions && licence.licenceConditions.riskManagement
+            include ./riskManagement
 
-    div#continueBtns.pure-g.paddingBottom
-        div.pure-u-1.inlineButtons
 
-            // TODO update link to send page
-            a#continueBtn.requiredButton.button(href="/hdc/taskList/"+nomisId role="button") Continue
+    div#continueBtns.paddingBottom
+        div.pure-g
+            div.pure-u-1.inlineButtons
 
-            a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/"+nomisId role="button") Back to tasklist
+                // TODO update link to send page
+                a#continueBtn.requiredButton.button(href="/hdc/taskList/"+nomisId role="button") Continue
+
+                a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/"+nomisId role="button") Back to tasklist
