--- a/server/views/proposedAddress/includes/otherResidents.pug
+++ b/server/views/proposedAddress/includes/otherResidents.pug
@@ -1,7 +1,9 @@
 - var residentsToShow = data.residents &&  data.residents.length > 3 ? data.residents.length : 3
 - var n = 0
 div.largePaddingBottom
-    h4.heading-small Other residents
+    div.pure-g
+        div.pure-u-1
+            h4.heading-small Other residents
     div.pure-g
         div.pure-u-sm-5-12 Name
         div.pure-u-sm-1-6.padLeftRight15 Age
