--- a/server/views/proposedAddress/includes/preferredAddress.pug
+++ b/server/views/proposedAddress/includes/preferredAddress.pug
@@ -1,8 +1,9 @@
 h3.heading-medium Preferred address
-div#addressDetails.pure-g.largePaddingBottom
-    div.pure-u-1.pure-u-sm-5-12.pure-g
-        div.pure-u-md-2-3
-            | Address
+div#addressDetails.pure-g.largePaddingBottom.content-pull
+
+    div.pure-u-1.pure-u-md-6-24
+        div.l-box
+            span Address
             div.paddingBottom.smallMarginTop
                 if data.addressLine1
                     p#address1.bold.noMargin #{data.addressLine1}
@@ -13,44 +14,52 @@ div#addressDetails.pure-g.largePaddingBottom
                 if data.postCode
                     p#addressPostCode.bold.noMargin #{data.postCode}
 
-        div.pure-u-md-2-3.largePaddingBottom
-            | Telephone
-            if data.telephone
-                p#telephone.bold #{data.telephone}
+            div.pure-u-md-2-3.largePaddingBottom
+                | Telephone
+                if data.telephone
+                    p#telephone.bold #{data.telephone}
 
-        div.pure-u-md-2-3.paddingBottom
-            p Does the address have an electricity supply?
-            if data.electricity
-                p#electricity.bold #{data.electricity}
 
-    if data.occupier
-        div.pure-u-1.pure-u-md-7-12
-            div.pure-g
-                p.pure-u-1-2.noMargin Name of main occupier
-                p.pure-u-1-4.noMargin Age
-                p.pure-u-1-4.noMargin Relation to prisoner
-
-            div.pure-g.smallMarginTop.borderBottomLight.smallPaddingBottom
-                p#occupierName.bold.pure-u-1-2.noMargin #{data.occupier.name}
-                p#occupierAge.bold.pure-u-1-4.noMargin #{data.occupier.age}
-                p#occupierRelation.bold.pure-u-1-4.noMargin #{data.occupier.relationship}
+    div.pure-u-1.pure-u-md-10-24
+        div.l-box
+            if data.occupier
+                span Main occupier details
+                div.pure-g.largePaddingBottom.content-pull
+                    div.pure-u-2-5
+                        .l-box
+                            span#occupierName.bold #{data.occupier.name}
+                    div.pure-u-1-5
+                        .l-box
+                            span#occupierAge.bold #{data.occupier.age}
+                    div.pure-u-2-5
+                        .l-box
+                            span#occupierRelation.bold  #{data.occupier.relationship}
 
             if data.residents
-
-                div.pure-g.largePaddingBottom.smallPaddingTop
-                    p.bold Other residents
-                    p.pure-u-1-2.noMargin Name
-                    p.pure-u-1-4.noMargin Age
-                    p.pure-u-1-4.noMargin Relation to prisoner
-
+                span Other occupants
+                div.largePaddingBottom
                     for resident in data.residents
-                        div.pure-g.smallMarginTop
-                            p.bold.pure-u-1-2.noMargin #{resident.name}
-                            p.bold.pure-u-1-4.noMargin #{resident.age}
-                            p.bold.pure-u-1-4.noMargin #{resident.relation}
+                        div.pure-g.content-pull
+                            div.pure-u-2-5
+                                .l-box
+                                    span.bold #{resident.name}
+
+                            div.pure-u-1-5
+                                .l-box
+                                    span.bold #{resident.age}
+
+                            div.pure-u-2-5
+                                .l-box
+                                    span.bold #{resident.relation}
 
 
-            div.pure-u-md-2-3
+            div
                 p Has the prisoner been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
                 if data.cautionedAgainstResident
                     p#cautionedAgainstResident.bold #{data.cautionedAgainstResident}
+
+    div.pure-u-1.pure-u-md-8-24
+        .l-box
+            if data.electricity
+                p.noMargin Does the address have an electricity supply?
+                p#electricity.bold #{data.electricity}
