--- a/server/views/reportingInstructions/index.pug
+++ b/server/views/reportingInstructions/index.pug
@@ -7,7 +7,7 @@ block content
 
     form#reportingForm(method='POST')
         div#address.pure-g.borderBottom.largeMarginBottom.midPaddingBottom
-            div.pure-u-1.pure-u-md-4-12
+            div.pure-u-1.pure-u-md-1-4
                 div.form-group
                     label.form-label(for="name") Name of person
                     input#name.form-control(name="name" type="text" value=reportingInstructions && reportingInstructions.name)
@@ -21,30 +21,40 @@ block content
                     label.form-label(for="town") Town or city
                     input#town.form-control(name="address3" type="text" value=reportingInstructions && reportingInstructions.address3)
 
-                div.form-group.pure-u-md-7-12
-                    label.form-label(for="postcode") Postcode
-                    input#postcode.form-control.small(name="postCode" type="text" value=reportingInstructions && reportingInstructions.postCode)
+                div.form-group
+                    div.pure-g
+                        div.pure-u-1.pure-u-md-7-12
+                            label.form-label(for="postcode") Postcode
+                            input#postcode.form-control.small(name="postCode" type="text" value=reportingInstructions && reportingInstructions.postCode)
 
-                div.form-group.pure-u-md-7-12
-                    label.form-label(for="telephone") Telephone
-                    input#telephone.form-control.small(name="telephone" type="text" value=reportingInstructions && reportingInstructions.telephone)
+                div.form-group
+                    div.pure-g
+                        div.pure-u-1.pure-u-md-7-12
+                            label.form-label(for="telephone") Telephone
+                            input#telephone.form-control.small(name="telephone" type="text" value=reportingInstructions && reportingInstructions.telephone)
         div#dateTime.pure-g.paddingBottom
-            div.pure-u-md-1-6
-                div.pure-u-1.form-group
-                    label.form-label(for="date") Date
-                    input#date.form-control.small(name="date" type="text" value=reportingInstructions && reportingInstructions.date)
-
-                div.pure-u-1.pure-g.inline.form-group.inline
-                    div.pure-u-1-2.padRight7
-                        label(for='hour') Hour
-                        input(type='text' name='hour' id='hour' class='form-control' value=reportingInstructions && reportingInstructions.hour)
-                    div.pure-u-1-2.padLeft7
-                        label(for='minute') Minute
-                        input(type='text' name='minute' id='minute' class='form-control' value=reportingInstructions && reportingInstructions.minute)
+            div.pure-u-1.pure-u-md-1-5
+                div.pure-g
+                    div.pure-u-1.form-group
+                        label.form-label(for="date") Date
+                        input#date.form-control.small(name="date" type="text" value=reportingInstructions && reportingInstructions.date)
+                div.pure-g
+                    div.pure-u-1
+                        div.inline.form-group.inline
+                            div.pure-g
+                                div.pure-u-1-2
+                                    div.padRight7
+                                        label(for='hour') Hour
+                                        input(type='text' name='hour' id='hour' class='form-control' value=reportingInstructions && reportingInstructions.hour)
+                                div.pure-u-1-2
+                                    div.padLeft7
+                                        label(for='minute') Minute
+                                        input(type='text' name='minute' id='minute' class='form-control' value=reportingInstructions && reportingInstructions.minute)
 
         div#continueBtns.pure-g.paddingBottom
-            div.pure-u-1.inlineButtons
-                input(type="hidden" name="_csrf" value=csrfToken)
-                input(type="hidden" name="nomisId" value=nomisId)
-                input#continueBtn.requiredButton.button(type="submit" value="Continue")
-                a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+            div.pure-u-1
+                div.inlineButtons
+                    input(type="hidden" name="_csrf" value=csrfToken)
+                    input(type="hidden" name="nomisId" value=nomisId)
+                    input#continueBtn.requiredButton.button(type="submit" value="Continue")
+                    a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
