--- a/server/views/send/CAtoDM.pug
+++ b/server/views/send/CAtoDM.pug
@@ -1,6 +1,7 @@
-div.pure-u-2-3
-    h2.heading-large.midPaddingBottom Submit for approval
-    p.lede The licence is ready to be submitted for approval by the decision maker or you can return to the task list and submit it later.
+div.pure-g
+    div.pure-u-2-3
+        h2.heading-large.midPaddingBottom Submit for approval
+        p.lede The licence is ready to be submitted for approval by the decision maker or you can return to the task list and submit it later.
 
 div#continueBtns.pure-g.paddingBottom
     div.pure-u-1
