--- a/server/views/send/ROtoCA.pug
+++ b/server/views/send/ROtoCA.pug
@@ -1,6 +1,7 @@
-div.pure-u-2-3
-    h2.heading-large.midPaddingBottom Send to the prison OMU team
-    p.lede The HDC licence information is ready to be sent to the OMU team or you can return to the tasklist and submit it later.
+div.pure-g
+    div.pure-u-2-3
+        h2.heading-large.midPaddingBottom Send to the prison OMU team
+        p.lede The HDC licence information is ready to be sent to the OMU team or you can return to the tasklist and submit it later.
 
 div#continueBtns.pure-g.paddingBottom
     div.pure-u-1
