--- a/server/views/taskList/curfewAddressTask.pug
+++ b/server/views/taskList/curfewAddressTask.pug
@@ -5,7 +5,7 @@ div.largeMarginBottom.borderTop
 
     if bassReferralRequested || optOut == 'Yes'
         div.pure-g
-            div.pure-u-9-12
+            div.pure-u-1
                 if taskData.hasBassReferral
                     p BASS referral requested
                 if taskData.hasOptedOut
@@ -13,7 +13,7 @@ div.largeMarginBottom.borderTop
 
     else
         div.pure-g
-            div.pure-u-9-12
+            div.pure-u-3-4
                 // TODO define approved
                 | Not yet approved
             div.pure-u-1-4
